--- a/templates/quote.html
+++ b/templates/quote.html
@@ -7,13 +7,11 @@
 {% block main %}
     <form action="/quote" method="post">
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
+            <input autocomplete="off" autofocus class="form-control" name="symbol" placeholder="Symbol" type="text">
         </div>
-        <div class="form-group">
-            <input class="form-control" name="password" placeholder="Password" type="password">
-        </div>
-        
 
-        <button class="btn btn-primary" type="submit">Quote</button>
+
+
+        <button class="btn btn-primary" type="submit"> Get Quote</button>
     </form>
 {% endblock %}
